--- a/DiageoMDMWeb/src/main/webapp/admin/parameter/filterQuerySegment.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/parameter/filterQuerySegment.xhtml
@@ -60,7 +60,7 @@
                             </p:column>
                             <p:column headerText="">
                                 <p:commandLink value="#{msg.btn_remove}" actionListener="#{segmentParametersBean.deleteParameterTable(paramSeg)}"  process="@this"
-                                               update="formQuerySegment:dtQuerySegment"/>
+                                               update="formQuerySegment:dtQuerySegment" style="color: blue"/>
                             </p:column>
                         </p:dataTable>
                     </div>
