--- a/DiageoMDMWeb/src/main/webapp/admin/subcanal/crearSubCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subcanal/crearSubCanal.xhtml
@@ -17,6 +17,10 @@
                             <h:panelGrid columns="2" style="width: 100%">
                                 <h:outputLabel value="#{msg.sub_can_nombre}" style="width: 30%"/>
                                 <p:inputText id="itNombre" value="#{subChannelCrear.nombreSubChannel}" required="true" label="#{msg.sub_can_nombre}" style="width: 70%"/>                             
+                                
+                                <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
+                                <p:inputText id="itAthenaCode" value="#{subChannelCrear.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>                             
+                                
                                 <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
                                 <p:selectOneMenu value="#{subChannelCrear.channel}" converter="channelConverter">
                                     <f:selectItems value="#{subChannelCrear.listaChannel}" var="cha" itemLabel="#{cha.nameChannel}"/>
