--- a/DiageoMDMWeb/src/main/webapp/admin/canal/consultarCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/canal/consultarCanal.xhtml
@@ -19,6 +19,9 @@
                             <p:column headerText="#{msg.can_nombre}">
                                 <h:outputLabel value="#{cha.nameChannel}"/>
                             </p:column>
+                            <p:column headerText="#{msg.athena_code}">
+                                <h:outputLabel value="#{cha.distri_1}"/>
+                            </p:column>
                             <p:column headerText="#{msg.estado}" style="text-align: center">                                       
                                 <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{cha.stateChannel eq '0'}"/>
                                 <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{cha.stateChannel eq '1'}"/>
@@ -35,6 +38,8 @@
                                 <h:panelGrid columns="2" style="width: 100%">
                                     <h:outputLabel value="#{msg.can_nombre}" style="width: 30%"/>
                                     <p:inputText id="itNombre" value="#{consultarChannelBean.nombreChannel}" required="true" label="#{msg.can_nombre}" style="width: 70%"/>
+                                    <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
+                                <p:inputText id="itAthenaCode" value="#{consultarChannelBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
                                     <h:outputLabel value="#{msg.estado}"/>
                                     <p:selectBooleanCheckbox label="#{msg.usu_activo}" value="#{consultarChannelBean.estado}"/>
                                 </h:panelGrid>
