--- a/DiageoMDMWeb/src/main/webapp/admin/canal/crearCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/canal/crearCanal.xhtml
@@ -16,13 +16,15 @@
                             <h:panelGrid columns="2" style="width: 100%">
                                 <h:outputLabel value="#{msg.can_nombre}" style="width: 30%"/>
                                 <p:inputText id="itNombre" value="#{crearChannel.nombreChannel}" required="true" label="#{msg.can_nombre}" style="width: 70%"/>
+                                <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
+                                <p:inputText id="itAthenaCode" value="#{crearChannel.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
                                 <h:outputLabel value="#{msg.estado}"/>
                                 <p:selectBooleanCheckbox label="#{msg.usu_activo}" value="#{crearChannel.estado}"/>
                             </h:panelGrid> 
                             <br/>
                             <br/>
                             <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" 
-                                             actionListener="#{crearChannel.crearChannel()}"
+                                             actionListener="#{crearChannel.createChannel()}"
                                              styleClass="button" style="width: 40%;left: 50%;-webkit-transform: translate(-50%)"/>
                             <br/>
                             <p:messages id="msg" closable="true" showDetail="true" showSummary="false" globalOnly="false" />
