--- a/DiageoMDMWeb/src/main/webapp/admin/distribuidor/crearDistribuidor.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/distribuidor/crearDistribuidor.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
@@ -12,11 +13,44 @@
             <ui:define name="content">
                 <h:form id="formDistri">
                     <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
-                        <h:panelGroup id="pgDistri" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
-                            <h:panelGrid columns="2" style="width: 100%">
+                        <h:panelGroup id="pgDistri" style="width: 85%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
+                            <h:panelGrid columns="4" style="width: 100%">
                                 <h:outputLabel value="#{msg.m_distri_nombre}" style="width: 30%"/>
-                                <p:inputText id="itNombre" required="true" value="#{distributorCreate.name}"
-                                             label="#{msg.m_distri_nombre}" style="width: 70%"/>
+                                <p:inputText id="itNombre" required="true" value="#{distributorCreate.name}" 
+                                             label="#{msg.m_distri_nombre}" style="width: 90%"/>
+
+                                <h:outputLabel value="#{msg.admin}" style="width: 30%"/>
+                                <p:inputText id="itNombreAdmin" required="true" value="#{distributorCreate.nameAdmin}"
+                                             label="#{msg.admin}" style="width: 90%"/>
+
+                                <h:outputLabel value="#{msg.regional}" style="width: 30%"/>
+                                <p:selectOneMenu id="somRegional" value="#{distributorCreate.db3partyRegionalSelected}" converter="regionalConverter" label="#{msg.regional}"
+                                                 style="width: 90%">
+                                    <f:selectItem itemLabel="#{msg.seleccion}" itemValue="#{null}"/>
+                                    <f:selectItems value="#{distributorCreate.listRegional}" var="reg" itemLabel="#{reg.nameRegional}"/>
+                                </p:selectOneMenu>
+
+                                <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
+                                <p:inputText id="itAthenaCode" required="true" value="#{distributorCreate.athenaCode}"
+                                             label="#{msg.athena_code}" style="width: 90%"/>
+
+                                <h:outputLabel value="#{msg.is_father}" style="width: 30%"/>
+                                <p:selectBooleanCheckbox value="#{distributorCreate.isFather}"/>
+
+                                <h:outputLabel value="#{msg.father}" style="width: 30%"/>
+                                <p:selectBooleanCheckbox value="#{distributorCreate.father}">
+                                    <p:ajax process="@this" update="formDistri:ol3partyFather formDistri:sompartyFather"/>
+                                </p:selectBooleanCheckbox>
+
+                                <h:panelGroup id="ol3partyFather">
+                                    <h:outputLabel value="#{msg.distri_father}" style="width: 30%" rendered="#{distributorCreate.father}"/>
+                                </h:panelGroup>
+                                <h:panelGroup id="sompartyFather">
+                                    <p:selectOneMenu value="#{distributorCreate.partyFatherSelected}" converter="distribuidorConverter" label="#{msg.distri_father}"
+                                                     rendered="#{distributorCreate.father}" style="width: 90%">
+                                        <f:selectItems value="#{distributorCreate.listDistributorFather}" var="reg" itemLabel="#{reg.name3party}"/>
+                                    </p:selectOneMenu>
+                                </h:panelGroup>
                             </h:panelGrid>
                             <br/>
                             <br/>
