--- a/DiageoMDMWeb/src/main/webapp/admin/subsegmento/crearSubSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subsegmento/crearSubSegmento.xhtml
@@ -17,22 +17,25 @@
                             <h:panelGrid columns="2" style="width: 100%">
                                     <h:outputLabel value="#{msg.sub_seg_nombre}" style="width: 30%"/>
                                     <p:inputText id="itNombre" value="#{subSegmentoCrearBean.nombre}" required="true" label="#{msg.sub_seg_nombre}" style="width: 70%"/>
+                                    
+                                    <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
+                                    <p:inputText id="itAthenaCode" value="#{subSegmentoCrearBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
 
                                     <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
                                     <p:selectOneMenu value="#{subSegmentoCrearBean.canal}" converter="channelConverter" required="true" label="#{msg.can_canal}">
-                                        <f:selectItems value="#{subSegmentoCrearBean.listaCanales}" var="cha" itemLabel="#{cha.nombre}"/>
+                                        <f:selectItems value="#{subSegmentoCrearBean.listaCanales}" var="cha" itemLabel="#{cha.nameChannel}"/>
                                         <p:ajax listener="#{subSegmentoCrearBean.listenerListaSubCanales()}" process="@this" update="somSubCanal somSegmento"/>
                                     </p:selectOneMenu>
 
                                     <h:outputLabel value="#{msg.sub_subcanal}" style="width: 30%"/>
                                     <p:selectOneMenu id="somSubCanal" value="#{subSegmentoCrearBean.subCanal}" converter="subChannelConverter" required="true" label="#{msg.sub_subcanal}">
-                                        <f:selectItems value="#{subSegmentoCrearBean.listaSubCanales}" var="subcha" itemLabel="#{subcha.nombre}"/>
+                                        <f:selectItems value="#{subSegmentoCrearBean.listaSubCanales}" var="subcha" itemLabel="#{subcha.nameSubChannel}"/>
                                         <p:ajax listener="#{subSegmentoCrearBean.listenerSegmento()}" process="@this" update="somSegmento"/>
                                     </p:selectOneMenu>
 
                                     <h:outputLabel value="#{msg.seg_segmento}" style="width: 30%"/>
                                     <p:selectOneMenu id="somSegmento" value="#{subSegmentoCrearBean.segmento}" converter="segmentoConverter" required="true" label="#{msg.seg_segmento}">
-                                        <f:selectItems value="#{subSegmentoCrearBean.listaSegmento}" var="subseg" itemLabel="#{subseg.nombre}"/>
+                                        <f:selectItems value="#{subSegmentoCrearBean.listaSegmento}" var="subseg" itemLabel="#{subseg.nameSegment}"/>
                                     </p:selectOneMenu>
 
                                     <h:outputLabel value="#{msg.estado}"/>
